// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="accordion-div"
    >
      <div
        class="accordionStyles-root-55"
      >
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-56 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-59"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-61"
            >
              product-name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-42-72 iconButtonStyles-text-75"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-medium-79 iconButtonStyles-text-75"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-42-72 iconButtonStyles-text-75"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-medium-79 iconButtonStyles-text-75"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-56 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-59"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product2\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-61"
            >
              product-name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-42-72 iconButtonStyles-text-75"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-medium-79 iconButtonStyles-text-75"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-42-72 iconButtonStyles-text-75"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-73 iconButtonStyles-medium-79 iconButtonStyles-text-75"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-56 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-59"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product3\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-61"
            >
              product3
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div
      class="accordion-div"
    >
      <div
        class="accordionStyles-root-28"
      >
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-29 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-32"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-34"
            >
              product-name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-46 iconButtonStyles-42-45 iconButtonStyles-text-48"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-46 iconButtonStyles-medium-52 iconButtonStyles-text-48"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-29 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-32"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product2\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-34"
            >
              product-name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-46 iconButtonStyles-42-45 iconButtonStyles-text-48"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-46 iconButtonStyles-medium-52 iconButtonStyles-text-48"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-29 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-32"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product3\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-34"
            >
              product3
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="accordion-div"
    >
      <div
        class="accordionStyles-root-1"
      >
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-7"
            >
              product-name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-19 iconButtonStyles-42-18 iconButtonStyles-text-21"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-19 iconButtonStyles-medium-25 iconButtonStyles-text-21"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product2\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-7"
            >
              product-name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div
                      class="icon-container"
                    >
                      <svg
                        class="external-link-icon"
                      />
                    </div>
                    <div
                      class="icon-container"
                    >
                      asset-code
                    </div>
                    <div
                      class="info-icon-container"
                    >
                      <div
                        class="Tooltip"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-19 iconButtonStyles-42-18 iconButtonStyles-text-21"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root tooltip-icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="download-icon-container"
                    >
                      <a
                        aria-disabled="false"
                        aria-label="Download"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-19 iconButtonStyles-medium-25 iconButtonStyles-text-21"
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                        href="http://localhost/pim-link-document-id"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class="all-files-icon"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product3\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-7"
            >
              product3
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
